--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@ $action.getHelper().renderConfluenceMacro("{015_dateutils}")
 $action.getHelper().renderConfluenceMacro("{009_a_calendar_styles}")
 $action.getHelper().renderConfluenceMacro("{009_a_event_form}")
 
+
 <script type= "text/javascript" defer="defer">
 
   AJS.toInit(function($){
@@ -17,10 +18,7 @@ AJS.$("#dialog-show-button").click(function(e) {
     e.preventDefault();
     AJS.dialog2("#demo-dialog").show();
 });
-AJS.$("#dialog-submit-button").click(function (e) {
-    e.preventDefault();
-    AJS.dialog2("#demo-dialog").hide();
-});
+
 AJS.$("#select-previous-month").click(function(e) {
 });
 AJS.$("#select-next-month").click(function(e) {
@@ -55,6 +53,15 @@ AJS.$("#select-next-month").click(function(e) {
 
 
        currentPage.setValues();
+      // eventDialog.setCurrentPage(currentPage);
+
+
+      //format the event list
+      $("h1:contains('Events')").before("<div id='eventlist' class='eventList'>hello</div>");
+
+      $("h1:contains('Events') + ul li").append("<span class='aui-icon aui-icon-small aui-iconfont-edit-filled'>Insert meaningful text here for accessibility</span>");
+      $("h1:contains('Events'), h1:contains('Events') + ul").appendTo("#eventlist");
+
 
        //Read the list of events stored on the page
        let eventList = currentPage.pageBody.match(/<h1>Events<\/h1><ul>(.+?)<\/ul>/)[0].split("<li>").filter(listElt =>/^Event from/.test(listElt));
@@ -64,100 +71,6 @@ AJS.$("#select-next-month").click(function(e) {
                 };
                 eventUtils.processEventStrArray(eventList, format);
 
-var eventDialog = (function(){
-
-      let dialog = new AJS.Dialog({
-        id: "event-create-dialog",
-        closeOnOutsideClick: true,
-      });
-      let beginDate;
-      let endDate;
-
-      dialog.addHeader("Create a new event");
-      let editField = `
-        <form class="aui">
-          <fieldset>
-            <div class="field-group">
-              <label for="d-fname">Event Description<span class="aui-icon icon-required"> required</span></label>
-              <input class="text" type="text" id="eventName" name="d-fname" title="first name">
-              <div class="description">Description of event</div>
-            </div>
-            <div class="field-group">
-                <label for="begin-date">When<span class="aui-icon icon-required"> required</span></label>
-                <input id="begin-date" type="date" /> to
-                <input id="dateEnd" type="date" />
-            </div>
-          </fieldset>
-       </form>`
-
-      dialog.addPanel("Panel 1", editField, "panel-body");
-      dialog.addLink("Cancel", function (dialog) {
-        dialog.hide();
-      }, "#");
-
-    dialog.addButton("create event", function (dialog) {
-        let options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' }
-        let beginDate = $("#begin-date").val();
-        let endDate = $("#dateEnd").val();
-        let eventName = $("#eventName").val();
-        if(eventName.length < 1 ){
-          AJS.flag({
-            type:'error',
-            title: 'You must provide a name for the event',
-            body: "An event name is necessary to create a new event"
-          });
-          return;
-        }
-        dateUtils.setSeparator("-");
-        if(dateUtils.dayStampToDate(endDate) < dateUtils.dayStampToDate(beginDate)){
-          AJS.flag({
-            type:'error',
-            title: 'Invalid end date',
-            body: 'The end date for your event should be after or on the start date',
-          });
-          return; //exit create event without creating an event
-        }
-        console.log("creating a new event from " + beginDate + " to " + endDate);
-
-        let newBody = currentPage.pageBody.replace(
-          "<h1>Events</h1><ul>",
-          "<h1>Events</h1><ul><li>Event from "+ beginDate +" to " + endDate + ": " + $('#eventName').val() + "</li>");
-
-        var jsondata = {
-          "version":{"number":currentPage.versionNumber + 1},
-          "title":currentPage.pageTitle,
-          "type":"page",
-          "body":{"storage":{"value":newBody,"representation":"storage"}}};
-
-        jQuery.ajax
-          ({
-            type: "PUT",
-            url: currentPage.path,
-            contentType:"application/json; charset=utf-8",
-            dataType: "json",
-            async: false,
-            data: JSON.stringify(jsondata),
-            success: function (){
-              console.log('Page saved!');
-              location.reload();
-            },
-            error : function(xhr, errorText){
-              console.log('Error '+ xhr.responseText);
-              location.reload();
-            }
-        });
-      });
-  return{
-        setParams: function(dayStamp){
-          var dayStampISO8601 = dayStamp.replace(/\_/g, "-");
-          $("#dateEnd").val(dayStampISO8601 );
-          $("#begin-date").val(dayStampISO8601);
-        },
-        show: function(){
-          dialog.show();
-        }
-      }
-    })();
 
 
 if (typeof dateUtils === 'object') {
@@ -209,7 +122,7 @@ function populateTable(theMonth, theYear) {
 }
 //function called when user clicks on a day
 function showDayDialog(dayID){
-    eventDialog.setParams(dayID);
+    eventDialog.setParams(dayID, currentPage);
     eventDialog.show();
 }
 function fillYears() {
@@ -242,6 +155,9 @@ function fillYears() {
      populateTable(theMonth, theYear);
 	  });
 
+ calendarSettings.setValues(
+      parseInt(document.dateChooser.chooseYear.options[document.dateChooser.chooseYear.selectedIndex].text),
+      document.dateChooser.chooseMonth.selectedIndex);
     let theMonth = document.dateChooser.chooseMonth.selectedIndex;
     let theYear = parseInt(document.dateChooser.chooseYear.options[document.dateChooser.chooseYear.selectedIndex].text);
 	  populateTable(theMonth, theYear);
